--- a/pubs.bib
+++ b/pubs.bib
@@ -1,476 +1,88 @@
-@article{1Yeung_2022,
-	doi = {10.1002/hbm.26182},
-	url = {https://doi.org/10.1002%2Fhbm.26182},
+@article{1Nissel_2022,
+	doi = {10.1017/s0140525x21002284},
+	url = {https://doi.org/10.1017%2Fs0140525x21002284},
 	year = 2022,
-	month = {dec},
-	publisher = {Wiley},
-	author = {Hon Wah Yeung and Aleks Stolicyn and Colin R. Buchanan and Elliot M. Tucker-Drob and Mark E. Bastin and Saturnino Luz and Andrew M. McIntosh and Heather C. Whalley and Simon R. Cox and Keith Smith},
-	title = {Predicting sex, age, general cognition and mental health with machine learning on brain structural connectomes},
-	journal = {Human Brain Mapping}
-}
-@article{2McCartney_2022,
-	doi = {10.1186/s13059-021-02596-5},
-	url = {https://doi.org/10.1186%2Fs13059-021-02596-5},
-	year = 2022,
-	month = {jan},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {23},
-	number = {1},
-	author = {Daniel L. McCartney and Robert F. Hillary and Eleanor L. S. Conole and Daniel Trejo Banos and Danni A. Gadd and Rosie M. Walker and Cliff Nangle and Robin Flaig and Archie Campbell and Alison D. Murray and Susana Mu{\~{n}}oz Maniega and Mar{\'{\i}}a del C. Vald{\'{e}}s-Hern{\'{a}}ndez and Mathew A. Harris and Mark E. Bastin and Joanna M. Wardlaw and Sarah E. Harris and David J. Porteous and Elliot M. Tucker-Drob and Andrew M. McIntosh and Kathryn L. Evans and Ian J. Deary and Simon R. Cox and Matthew R. Robinson and Riccardo E. Marioni},
-	title = {Blood-based epigenome-wide analyses of cognitive abilities},
-	journal = {Genome Biology}
-}
-@article{3Grotzinger_2022,
-	doi = {10.1038/s41467-022-33724-9},
-	url = {https://doi.org/10.1038%2Fs41467-022-33724-9},
-	year = 2022,
-	month = {oct},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {13},
-	number = {1},
-	author = {Andrew D. Grotzinger and Javier de la Fuente and Gail Davies and Michel G. Nivard and Elliot M. Tucker-Drob},
-	title = {Transcriptome-wide and stratified genomic structural equation modeling identify neurobiological pathways shared across diverse cognitive traits},
-	journal = {Nature Communications}
-}
-@article{4Raffington_2022,
-	doi = {10.1037/dev0001393},
-	url = {https://doi.org/10.1037%2Fdev0001393},
-	year = 2022,
-	month = {oct},
-	publisher = {American Psychological Association ({APA})},
-	volume = {58},
-	number = {10},
-	pages = {1832--1848},
-	author = {Laurel Raffington and Margherita Malanchini and Andrew D. Grotzinger and James W. Madole and Laura E. Engelhardt and Aditi Sabhlok and Cherry Youn and Megan W. Patterson and K. Paige Harden and Elliot M. Tucker-Drob},
-	title = {An in-laboratory stressor reveals unique genetic variation in child cortisol output.},
-	journal = {Developmental Psychology}
-}
-@article{5Sabhlok_2021,
-	doi = {10.1111/desc.13168},
-	url = {https://doi.org/10.1111%2Fdesc.13168},
-	year = 2022,
-	month = {aug},
-	publisher = {Wiley},
-	volume = {25},
-	number = {2},
-	author = {Aditi Sabhlok and Margherita Malanchini and Laura E. Engelhardt and James Madole and Elliot M. Tucker-Drob and Kathryn Paige Harden},
-	title = {The relationship between executive function, processing speed, and attention-deficit hyperactivity disorder in middle childhood},
-	journal = {Developmental Science}
-}
-@article{6Tucker_Drob_2022,
-	doi = {10.1126/sciadv.abj2422},
-	url = {https://doi.org/10.1126%2Fsciadv.abj2422},
-	year = 2022,
-	month = {feb},
-	publisher = {American Association for the Advancement of Science ({AAAS})},
-	volume = {8},
-	number = {5},
-	author = {Elliot M. Tucker-Drob and Javier de la Fuente and Ylva Köhncke and Andreas M. Brandmaier and Lars Nyberg and Ulman Lindenberger},
-	title = {A strong dependency between changes in fluid and crystallized abilities in human cognitive aging},
-	journal = {Science Advances}
-}
-@article{7Durkee_2022,
-	doi = {10.1177/09567976211031571},
-	url = {https://doi.org/10.1177%2F09567976211031571},
-	year = 2022,
-	month = {jan},
-	publisher = {{SAGE} Publications},
-	volume = {33},
-	number = {2},
-	pages = {285--298},
-	author = {Patrick K. Durkee and Aaron W. Lukaszewski and Christopher R. von Rueden and Michael D. Gurven and David M. Buss and Elliot M. Tucker-Drob},
-	title = {Niche Diversity Predicts Personality Structure Across 115 Nations},
-	journal = {Psychological Science}
-}
-@article{8Dutra_2022,
-	doi = {10.1111/desc.13228},
-	url = {https://doi.org/10.1111%2Fdesc.13228},
-	year = 2022,
-	month = {jan},
-	publisher = {Wiley},
-	volume = {25},
-	number = {5},
-	author = {Nat{\'{a}}lia B. Dutra and Lydia Chen and Adote Anum and Oskar Burger and Helen E. Davis and Vivian A. Dzokoto and Frankie T. K. Fong and Sabrina Ghelardi and Kimberly Mendez and Emily J. E. Messer and Morgan Newhouse and Mark G. Nielsen and Karlos Ramos and Bruce Rawlings and Renan A. C. dos Santos and Lara G. S. Silveira and Elliot M. Tucker-Drob and Cristine H. Legare},
-	title = {Examining relations between performance on non-verbal executive function and verbal self-regulation tasks in demographically-diverse populations},
-	journal = {Developmental Science}
-}
-@article{9Gadd_2020,
-	doi = {10.1101/2020.12.01.404681},
-	url = {https://doi.org/10.1101%2F2020.12.01.404681},
-	year = 2022,
-	month = {dec},
-	publisher = {Cold Spring Harbor Laboratory},
-	author = {Danni A Gadd and Robert F Hillary and Daniel L McCartney and Shaza B Zaghlool and Anna J Stevenson and Cliff Nangle and Archie Campbell and Robin Flaig and Sarah E Harris and Rosie M Walker and Liu Shi and Elliot M Tucker-Drob and Christian Gieger and Annette Peters and Melanie Waldenberger and Johannes Graumann and Allan F McRae and Ian J Deary and David J Porteous and Caroline Hayward and Peter M Visscher and Simon R Cox and Kathryn L Evans and Andrew M McIntosh and Karsten Suhre and Riccardo E Marioni},
-	title = {Epigenetic scores for the circulating proteome as tools for disease prediction},
-	journal = {eLife}
-}
-@article{10Gadd_2022,
-	doi = {10.7554/elife.71802},
-	url = {https://doi.org/10.7554%2Felife.71802},
-	year = 2022,
-	month = {jan},
-	publisher = {{eLife} Sciences Publications, Ltd},
-	volume = {11},
-	author = {Danni A Gadd and Robert F Hillary and Daniel L McCartney and Shaza B Zaghlool and Anna J Stevenson and Yipeng Cheng and Chloe Fawns-Ritchie and Cliff Nangle and Archie Campbell and Robin Flaig and Sarah E Harris and Rosie M Walker and Liu Shi and Elliot M Tucker-Drob and Christian Gieger and Annette Peters and Melanie Waldenberger and Johannes Graumann and Allan F McRae and Ian J Deary and David J Porteous and Caroline Hayward and Peter M Visscher and Simon R Cox and Kathryn L Evans and Andrew M McIntosh and Karsten Suhre and Riccardo E Marioni},
-	title = {Epigenetic scores for the circulating proteome as tools for disease prediction},
-	journal = {{eLife}}
-}
-@article{11Domingue_2021,
-	doi = {10.1007/s10519-021-10090-8},
-	url = {https://doi.org/10.1007%2Fs10519-021-10090-8},
-	year = 2022,
-	month = {dec},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {52},
-	number = {1},
-	pages = {56--64},
-	author = {Benjamin W. Domingue and Klint Kanopka and Travis T. Mallard and Sam Trejo and Elliot M. Tucker-Drob},
-	title = {Modeling Interaction and Dispersion Effects in the Analysis of Gene-by-Environment Interaction},
-	journal = {Behavior Genetics}
-}
-@article{12Junkins_2021,
-	doi = {10.5964/ps.7275},
-	url = {https://doi.org/10.5964%2Fps.7275},
-	year = 2021,
-	month = {dec},
-	publisher = {Leibniz Institute for Psychology ({ZPID})},
-	volume = {2},
-	author = {Eleanor J. Junkins and Joseph E. Potter and Peter J. Rentfrow and Samuel D. Gosling and Jeff Potter and K. Paige Harden and Elliot M. Tucker-Drob and Jaime Derringer and Daniel A. Briley},
-	title = {Geographic variation in personality is associated with fertility across the United States},
-	journal = {Personality Science}
-}
-@article{13Becker_2021,
-	doi = {10.1038/s41562-021-01119-3},
-	url = {https://doi.org/10.1038%2Fs41562-021-01119-3},
-	year = 2021,
-	month = {jun},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {5},
-	number = {12},
-	pages = {1744--1758},
-	author = {Joel Becker and Casper A. P. Burik and Grant Goldman and Nancy Wang and Hariharan Jayashankar and Michael Bennett and Daniel W. Belsky and Richard Karlsson Linn{\'{e}}r and Rafael Ahlskog and Aaron Kleinman and David A. Hinds and Michelle Agee and Babak Alipanahi and Adam Auton and Robert K. Bell and Katarzyna Bryc and Sarah L. Elson and Pierre Fontanillas and Nicholas A. Furlotte and Karen E. Huber and Nadia K. Litterman and Jennifer C. McCreight and Matthew H. McIntyre and Joanna L. Mountain and Carrie A. M. Northover and Steven J. Pitts and J. Fah Sathirapongsasuti and Olga V. Sazonova and Janie F. Shelton and Suyash Shringarpure and Chao Tian and Joyce Y. Tung and Vladimir Vacic and Catherine H. Wilson and Avshalom Caspi and David L. Corcoran and Terrie E. Moffitt and Richie Poulton and Karen Sugden and Benjamin S. Williams and Kathleen Mullan Harris and Andrew Steptoe and Olesya Ajnakina and Lili Milani and T{\~{o}}nu Esko and William G. Iacono and Matt McGue and Patrik K. E. Magnusson and Travis T. Mallard and K. Paige Harden and Elliot M. Tucker-Drob and Pamela Herd and Jeremy Freese and Alexander Young and Jonathan P. Beauchamp and Philipp D. Koellinger and Sven Oskarsson and Magnus Johannesson and Peter M. Visscher and Michelle N. Meyer and David Laibson and David Cesarini and Daniel J. Benjamin and Patrick Turley and Aysu Okbay and},
-	title = {Resource profile and user guide of the Polygenic Index Repository},
-	journal = {Nature Human Behaviour}
-}
-@article{14Raffington_2021,
-	doi = {10.1542/peds.2020-024406},
-	url = {https://doi.org/10.1542%2Fpeds.2020-024406},
-	year = 2021,
-	month = {jun},
-	publisher = {American Academy of Pediatrics ({AAP})},
-	volume = {147},
-	number = {6},
-	author = {Laurel Raffington and Daniel W. Belsky and Meeraj Kothari and Margherita Malanchini and Elliot M. Tucker-Drob and K. Paige Harden},
-	title = {Socioeconomic Disadvantage and the Pace of Biological Aging in Children},
-	journal = {Pediatrics}
-}
-@article{15Cox_2021,
-	doi = {10.1038/s41380-020-00975-1},
-	url = {https://doi.org/10.1038%2Fs41380-020-00975-1},
-	year = 2021,
-	month = {jan},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {26},
-	number = {6},
-	pages = {2651--2662},
-	author = {S. R. Cox and M. A. Harris and S. J. Ritchie and C. R. Buchanan and M. C. Vald{\'{e}}s Hern{\'{a}}ndez and J. Corley and A. M. Taylor and J. W. Madole and S. E. Harris and H. C. Whalley and A. M. McIntosh and T. C. Russ and M. E. Bastin and J. M. Wardlaw and I. J. Deary and E. M. Tucker-Drob},
-	title = {Three major dimensions of human brain cortical ageing in relation to cognitive decline across the eighth decade of life},
-	journal = {Molecular Psychiatry}
-}
-@article{16Madole_2021,
-	doi = {10.1016/j.biopsych.2020.06.010},
-	url = {https://doi.org/10.1016%2Fj.biopsych.2020.06.010},
-	year = 2021,
-	month = {apr},
-	publisher = {Elsevier {BV}},
-	volume = {89},
-	number = {8},
-	pages = {795--806},
-	author = {James W. Madole and Stuart J. Ritchie and Simon R. Cox and Colin R. Buchanan and Maria Vald{\'{e}}s Hern{\'{a}}ndez and Susana Mu{\~{n}}oz Maniega and Joanna M. Wardlaw and Mathew A. Harris and Mark E. Bastin and Ian J. Deary and Elliot M. Tucker-Drob},
-	title = {Aging-Sensitive Networks Within the Human Structural Connectome Are Implicated in Late-Life Cognitive Declines},
-	journal = {Biological Psychiatry}
-}
-@article{17de_la_Fuente_2020,
-	doi = {10.1038/s41562-020-00936-2},
-	url = {https://doi.org/10.1038%2Fs41562-020-00936-2},
-	year = 2021,
-	month = {sep},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {5},
-	number = {1},
-	pages = {49--58},
-	author = {Javier de la Fuente and Gail Davies and Andrew D. Grotzinger and Elliot M. Tucker-Drob and Ian J. Deary},
-	title = {A general dimension of genetic sharing across diverse cognitive traits inferred from molecular data},
-	journal = {Nature Human Behaviour}
-}
-@article{18Van_den_Akker_2021,
-	doi = {10.1037/dev0001135},
-	url = {https://doi.org/10.1037%2Fdev0001135},
-	year = 2021,
-	month = {jan},
-	publisher = {American Psychological Association ({APA})},
-	volume = {57},
-	number = {1},
-	pages = {60--72},
-	author = {Alithe L. Van den Akker and Daniel A. Briley and Andrew D. Grotzinger and Jennifer L. Tackett and Elliot M. Tucker-Drob and K. Paige Harden},
-	title = {Adolescent Big Five personality and pubertal development: Pubertal hormone concentrations and self-reported pubertal status.},
-	journal = {Developmental Psychology}
-}
-@article{19Buchanan_2021,
-	doi = {10.1002/hbm.25473},
-	url = {https://doi.org/10.1002%2Fhbm.25473},
-	year = 2021,
-	month = {may},
-	publisher = {Wiley},
-	volume = {42},
-	number = {12},
-	pages = {3905--3921},
-	author = {Colin R. Buchanan and Susana Mu{\~{n}}oz Maniega and Maria C. Vald{\'{e}}s Hern{\'{a}}ndez and Lucia Ballerini and Gayle Barclay and Adele M. Taylor and Tom C. Russ and Elliot M. Tucker-Drob and Joanna M. Wardlaw and Ian J. Deary and Mark E. Bastin and Simon R. Cox},
-	title = {Comparison of structural {MRI} brain measures between 1.5 and 3~T: Data from the Lothian Birth Cohort 1936},
-	journal = {Human Brain Mapping}
-}
-@article{20Roe_2021,
-	doi = {10.1016/j.neuroimage.2020.117621},
-	url = {https://doi.org/10.1016%2Fj.neuroimage.2020.117621},
-	year = 2021,
-	month = {feb},
-	publisher = {Elsevier {BV}},
-	volume = {227},
-	pages = {117621},
-	author = {Mary Abbe Roe and Laura E. Engelhardt and Tehila Nugiel and K. Paige Harden and Elliot M. Tucker-Drob and Jessica A. Church},
-	title = {Error-signaling in the developing brain},
-	journal = {{NeuroImage}}
-}
-@article{21Vogt_2021,
-	doi = {10.1177/19485506211036610},
-	url = {https://doi.org/10.1177%2F19485506211036610},
-	year = 2021,
-	month = {sep},
-	publisher = {{SAGE} Publications},
-	volume = {13},
-	number = {3},
-	pages = {734--746},
-	author = {Randi L. Vogt and Anqing Zheng and Daniel A. Briley and Margherita Malanchini and K. Paige Harden and Elliot M. Tucker-Drob},
-	title = {Genetic and Environmental Factors of Non-Ability-Based Confidence},
-	journal = {Social Psychological and Personality Science}
-}
-@article{22Karlsson_Linn_r_2021,
-	doi = {10.1038/s41593-021-00908-3},
-	url = {https://doi.org/10.1038%2Fs41593-021-00908-3},
-	year = 2021,
-	month = {aug},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {24},
-	number = {10},
-	pages = {1367--1376},
-	author = {Richard Karlsson Linn{\'{e}}r and Travis T. Mallard and Peter B. Barr and Sandra Sanchez-Roige and James W. Madole and Morgan N. Driver and Holly E. Poore and Ronald de Vlaming and Andrew D. Grotzinger and Jorim J. Tielbeek and Emma C. Johnson and Mengzhen Liu and Sara Brin Rosenthal and Trey Ideker and Hang Zhou and Rachel L. Kember and Joëlle A. Pasman and Karin J. H. Verweij and Dajiang J. Liu and Scott Vrieze and Bernice Porjesz and Victor Hesselbrock and Tatiana M. Foroud and Arpana Agrawal and Howard J. Edenberg and John I. Nurnberger Jr and Yunlong Liu and Samuel Kuperman and John Kramer and Jacquelyn L. Meyer and Chella Kamarajan and Ashwini K. Pandey and Laura Bierut and John Rice and Kathleen K. Bucholz and Marc A. Schuckit and Jay Tischfield and Andrew Brooks and Ronald P. Hart and Laura Almasy and Danielle M. Dick and Jessica E. Salvatore and Allison Goate and Manav Kapoor and Paul Slesinger and Denise M. Scott and Lance Bauer and Leah Wetherill and Xiaoling Xuei and Dongbing Lai and Sean J. O'Connor and Martin H. Plawecki and Spencer Lourens and Laura Acion and Grace Chan and David B. Chorlian and Jian Zhang and Sivan Kinreich and Gayathri Pandey and Michael J. Chao and Andrey P. Anokhin and Vivia V. McCutcheon and Scott Saccone and Fazil Aliev and Peter B. Barr and Hemin Chin and Abbas Parsian and Henry R. Kranzler and Joel Gelernter and Kathleen Mullan Harris and Elliot M. Tucker-Drob and Irwin D. Waldman and Abraham A. Palmer and K. Paige Harden and Philipp D. Koellinger and Danielle M. Dick and},
-	title = {Multivariate analysis of 1.5 million people identifies genetic associations with traits related to self-regulation and addiction},
-	journal = {Nature Neuroscience}
-}
-@article{23Malanchini_2020,
-	doi = {10.1038/s41380-020-0747-z},
-	url = {https://doi.org/10.1038%2Fs41380-020-0747-z},
-	year = 2021,
-	month = {may},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {26},
-	number = {9},
-	pages = {4823--4838},
-	author = {Margherita Malanchini and Laura E. Engelhardt and Laurel A. Raffington and Aditi Sabhlok and Andrew D. Grotzinger and Daniel A. Briley and James W. Madole and Samantha M. Freis and Megan W. Patterson and K. Paige Harden and Elliot M. Tucker-Drob},
-	title = {Weak and uneven associations of home, neighborhood, and school environments with stress hormone output across multiple timescales},
-	journal = {Molecular Psychiatry}
-}
-@article{24Bosma_2021,
-	doi = {10.1017/s0033291721004244},
-	url = {https://doi.org/10.1017%2Fs0033291721004244},
-	year = 2021,
-	month = {nov},
 	publisher = {Cambridge University Press ({CUP})},
-	pages = {1--10},
-	author = {M. J. Bosma and S. R. Cox and T. Ziermans and C. R. Buchanan and X. Shen and E. M. Tucker-Drob and M. J. Adams and H. C. Whalley and S. M. Lawrie},
-	title = {White matter, cognition and psychotic-like experiences in {UK} Biobank},
-	journal = {Psychological Medicine}
+	volume = {45},
+	author = {Jenny E. Nissel and Jacqueline D. Woolley},
+	title = {Brave new world: Imaginative fictions offer simulated safety and actual benefits},
+	journal = {Behavioral and Brain Sciences}
 }
-@article{25L_vd_n_2020,
-	doi = {10.1177/1529100620920576},
-	url = {https://doi.org/10.1177%2F1529100620920576},
-	year = 2020,
-	month = {aug},
-	publisher = {{SAGE} Publications},
-	volume = {21},
-	number = {1},
-	pages = {6--41},
-	author = {Martin Lövd{\'{e}}n and Laura Fratiglioni and M. Maria Glymour and Ulman Lindenberger and Elliot M. Tucker-Drob},
-	title = {Education and Cognitive Functioning Across the Life Span},
-	journal = {Psychological Science in the Public Interest}
+@article{2Dore_2022,
+	doi = {10.1111/bjdp.12437},
+	url = {https://doi.org/10.1111%2Fbjdp.12437},
+	year = 2022,
+	month = {nov},
+	publisher = {Wiley},
+	author = {Rebecca A. Dore and Jacqueline Woolley and Jenny Nissel and John G. Hixon},
+	title = {Never trust a stranger: Effects of explicit belief statements from strangers on children{\textquotesingle}s reality status beliefs and beliefs about consensus},
+	journal = {British Journal of Developmental Psychology}
 }
-@article{26Demange_2021,
-	doi = {10.1038/s41588-020-00754-2},
-	url = {https://doi.org/10.1038%2Fs41588-020-00754-2},
+@article{3Li_2022,
+	doi = {10.1016/j.cogdev.2022.101162},
+	url = {https://doi.org/10.1016%2Fj.cogdev.2022.101162},
+	year = 2022,
+	month = {apr},
+	publisher = {Elsevier {BV}},
+	volume = {62},
+	pages = {101162},
+	author = {Hui Li and Haoxue Yu and Jacqueline D. Woolley and Lihanjing Wu},
+	title = {The impact of informant type on children{\textquotesingle}s animal knowledge learning},
+	journal = {Cognitive Development}
+}
+@article{4Woolley_2021,
+	doi = {10.1111/cdev.13500},
+	url = {https://doi.org/10.1111%2Fcdev.13500},
 	year = 2021,
 	month = {jan},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {53},
-	number = {1},
-	pages = {35--44},
-	author = {Perline A. Demange and Margherita Malanchini and Travis T. Mallard and Pietro Biroli and Simon R. Cox and Andrew D. Grotzinger and Elliot M. Tucker-Drob and Abdel Abdellaoui and Louise Arseneault and Elsje van Bergen and Dorret I. Boomsma and Avshalom Caspi and David L. Corcoran and Benjamin W. Domingue and Kathleen Mullan Harris and Hill F. Ip and Colter Mitchell and Terrie E. Moffitt and Richie Poulton and Joseph A. Prinz and Karen Sugden and Jasmin Wertz and Benjamin S. Williams and Eveline L. de Zeeuw and Daniel W. Belsky and K. Paige Harden and Michel G. Nivard},
-	title = {Investigating the genetic architecture of noncognitive skills using {GWAS}-by-subtraction},
-	journal = {Nature Genetics}
+	publisher = {Wiley},
+	volume = {92},
+	number = {3},
+	author = {Jacqueline D. Woolley and Jenny Nissel and Ansley T. Gilpin},
+	title = {Children's Use of Testimony to Determine Reality Status},
+	journal = {Child Development}
 }
-@article{27Brumpton_2020,
-	doi = {10.1038/s41467-020-17117-4},
-	url = {https://doi.org/10.1038%2Fs41467-020-17117-4},
-	year = 2020,
-	month = {jul},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {11},
+@article{5Ghossainy_2021,
+	doi = {10.1177/1474704920986860},
+	url = {https://doi.org/10.1177%2F1474704920986860},
+	year = 2021,
+	month = {jan},
+	publisher = {{SAGE} Publications},
+	volume = {19},
 	number = {1},
-	author = {Ben Brumpton and Eleanor Sanderson and Karl Heilbron and Fernando Pires Hartwig and Sean Harrison and Gunnhild {\AA}berge Vie and Yoonsu Cho and Laura D. Howe and Amanda Hughes and Dorret I. Boomsma and Alexandra Havdahl and John Hopper and Michael Neale and Michel G. Nivard and Nancy L. Pedersen and Chandra A. Reynolds and Elliot M. Tucker-Drob and Andrew Grotzinger and Laurence Howe and Tim Morris and Shuai Li and Ben Brumpton and Eleanor Sanderson and Karl Heilbron and Fernando Pires Hartwig and Sean Harrison and Gunnhild {\AA}berge Vie and Yoonsu Cho and Laura D. Howe and Amanda Hughes and Dorret I. Boomsma and Alexandra Havdahl and John Hopper and Michael Neale and Michel G. Nivard and Nancy L. Pedersen and Chandra A. Reynolds and Elliot M. Tucker-Drob and Andrew Grotzinger and Laurence Howe and Tim Morris and Shuai Li and Adam Auton and Frank Windmeijer and Wei-Min Chen and Johan H{\aa}kon Bj{\o}rngaard and Kristian Hveem and Cristen Willer and David M. Evans and Jaakko Kaprio and George Davey Smith and Bj{\o}rn Olav {\AA}svold and Gibran Hemani and Neil M. Davies and Karl Heilbron and Adam Auton and Adam Auton and Frank Windmeijer and Wei-Min Chen and Johan H{\aa}kon Bj{\o}rngaard and Kristian Hveem and Cristen Willer and David M. Evans and Jaakko Kaprio and George Davey Smith and Bj{\o}rn Olav {\AA}svold and Gibran Hemani and Neil M. Davies and   and},
-	title = {Avoiding dynastic, assortative mating, and population stratification biases in Mendelian randomization through within-family analyses},
-	journal = {Nature Communications}
+	pages = {147470492098686},
+	author = {Maliki E. Ghossainy and Laith Al-Shawaf and Jacqueline D. Woolley},
+	title = {Epistemic Vigilance in Early Ontogeny: Children's Use of Nonverbal Behavior to Detect Deception},
+	journal = {Evolutionary Psychology}
 }
-@article{28Hartung_2020,
-	doi = {10.1016/j.jecp.2019.104681},
-	url = {https://doi.org/10.1016%2Fj.jecp.2019.104681},
-	year = 2020,
+@article{6Bunce_2021,
+	doi = {10.1016/j.cogdev.2020.100979},
+	url = {https://doi.org/10.1016%2Fj.cogdev.2020.100979},
+	year = 2021,
 	month = {jan},
 	publisher = {Elsevier {BV}},
-	volume = {189},
-	pages = {104681},
-	author = {Johanna Hartung and Laura E. Engelhardt and Megan L. Thibodeaux and K. Paige Harden and Elliot M. Tucker-Drob},
-	title = {Developmental transformations in the structure of executive functions},
-	journal = {Journal of Experimental Child Psychology}
+	volume = {57},
+	pages = {100979},
+	author = {Louise Bunce and Jacqueline D. Woolley},
+	title = {Fantasy orientation and creativity in childhood: A closer look},
+	journal = {Cognitive Development}
 }
-@article{29Demeter_2020,
-	doi = {10.1016/j.isci.2019.100801},
-	url = {https://doi.org/10.1016%2Fj.isci.2019.100801},
+@article{7Woolley_2020,
+	doi = {10.1037/dev0001104},
+	url = {https://doi.org/10.1037%2Fdev0001104},
 	year = 2020,
-	month = {jan},
-	publisher = {Elsevier {BV}},
-	volume = {23},
-	number = {1},
-	pages = {100801},
-	author = {Damion V. Demeter and Laura E. Engelhardt and Remington Mallett and Evan M. Gordon and Tehila Nugiel and K. Paige Harden and Elliot M. Tucker-Drob and Jarrod A. Lewis-Peacock and Jessica A. Church},
-	title = {Functional Connectivity Fingerprints at Rest Are Similar across Youths and Adults and Vary with Genetic Similarity},
-	journal = {{iScience}}
+	month = {oct},
+	publisher = {American Psychological Association ({APA})},
+	volume = {56},
+	number = {10},
+	pages = {1866--1878},
+	author = {Jacqueline D. Woolley and Kelsey A. Kelley},
+	title = {{\textquotedblleft}When something like a ladybug lands on you{\textquotedblright}: Origins and development of the concept of luck.},
+	journal = {Developmental Psychology}
 }
-@article{30Harden_2020,
-	doi = {10.1016/j.jaac.2019.05.006},
-	url = {https://doi.org/10.1016%2Fj.jaac.2019.05.006},
-	year = 2020,
-	month = {jun},
-	publisher = {Elsevier {BV}},
-	volume = {59},
-	number = {6},
-	pages = {749--758},
-	author = {K. Paige Harden and Laura E. Engelhardt and Frank D. Mann and Megan W. Patterson and Andrew D. Grotzinger and Stephanie L. Savicki and Megan L. Thibodeaux and Samantha M. Freis and Jennifer L. Tackett and Jessica A. Church and Elliot M. Tucker-Drob},
-	title = {Genetic Associations Between Executive Functions and a General Factor of Psychopathology},
-	journal = {Journal of the American Academy of Child {\&} Adolescent Psychiatry}
-}
-@article{31Harden_2020,
-	doi = {10.1038/s41539-020-0060-2},
-	url = {https://doi.org/10.1038%2Fs41539-020-0060-2},
-	year = 2020,
-	month = {feb},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {5},
-	number = {1},
-	author = {K. Paige Harden and Benjamin W. Domingue and Daniel W. Belsky and Jason D. Boardman and Robert Crosnoe and Margherita Malanchini and Michel Nivard and Elliot M. Tucker-Drob and Kathleen Mullan Harris},
-	title = {Genetic associations with mathematics tracking and persistence in secondary school},
-	journal = {npj Science of Learning}
-}
-@article{32Malanchini_2020,
-	doi = {10.1038/s41398-020-0711-3},
-	url = {https://doi.org/10.1038%2Fs41398-020-0711-3},
-	year = 2020,
-	month = {jan},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {10},
-	number = {1},
-	author = {Margherita Malanchini and Kaili Rimfeld and Zhe Wang and Stephen A. Petrill and Elliot M. Tucker-Drob and Robert Plomin and Yulia Kovas},
-	title = {Genetic factors underlie the association between anxiety, attitudes and performance in mathematics},
-	journal = {Translational Psychiatry}
-}
-@article{33Jelenkovic_2020,
-	doi = {10.1038/s41598-020-64883-8},
-	url = {https://doi.org/10.1038%2Fs41598-020-64883-8},
-	year = 2020,
-	month = {may},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {10},
-	number = {1},
-	author = {Aline Jelenkovic and Reijo Sund and Yoshie Yokoyama and Antti Latvala and Masumi Sugawara and Mami Tanaka and Satoko Matsumoto and Duarte L. Freitas and Jos{\'{e}} Antonio Maia and Ariel Knafo-Noam and David Mankuta and Lior Abramson and Fuling Ji and Feng Ning and Zengchang Pang and Esther Rebato and Kimberly J. Saudino and Tessa L. Cutler and John L. Hopper and Vilhelmina Ullemar and Catarina Almqvist and Patrik K. E. Magnusson and Wendy Cozen and Amie E. Hwang and Thomas M. Mack and Tracy L. Nelson and Keith E. Whitfield and Joohon Sung and Jina Kim and Jooyeon Lee and Sooji Lee and Clare H. Llewellyn and Abigail Fisher and Emanuela Medda and Lorenza Nistic{\`{o}} and Virgilia Toccaceli and Laura A. Baker and Catherine Tuvblad and Robin P. Corley and Brooke M. Huibregtse and Catherine A. Derom and Robert F. Vlietinck and Ruth J. F. Loos and S. Alexandra Burt and Kelly L. Klump and Judy L. Silberg and Hermine H. Maes and Robert F. Krueger and Matt McGue and Shandell Pahlen and Margaret Gatz and David A. Butler and Jennifer R. Harris and Ingunn Brandt and Thomas S. Nilsen and K. Paige Harden and Elliot M. Tucker-Drob and Carol E. Franz and William S. Kremen and Michael J. Lyons and Paul Lichtenstein and Meike Bartels and Catharina E. M. van Beijsterveldt and Gonneke Willemsen and Sevgi Y. Öncel and Fazil Aliev and Hoe-Uk Jeong and Yoon-Mi Hur and Eric Turkheimer and Dorret I. Boomsma and Thorkild I. A. S{\o}rensen and Jaakko Kaprio and Karri Silventoinen},
-	title = {Genetic and environmental influences on human height from infancy through adulthood at different levels of parental education},
-	journal = {Scientific Reports}
-}
-@article{34Domingue_2020,
-	doi = {10.15195/v7.a19},
-	url = {https://doi.org/10.15195%2Fv7.a19},
-	year = 2020,
-	publisher = {Society for Sociological Science},
-	volume = {7},
-	pages = {365--386},
-	author = {Benjamin Domingue and Sam Trejo and Emma Armstrong-Carter and Elliot Tucker-Drob},
-	title = {Interactions between Polygenic Scores and Environments: Methodological and Conceptual Challenges},
-	journal = {Sociological Science}
-}
-@article{35Hillary_2020,
-	doi = {10.1186/s13073-020-00754-1},
-	url = {https://doi.org/10.1186%2Fs13073-020-00754-1},
-	year = 2020,
-	month = {jul},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {12},
-	number = {1},
-	author = {Robert F. Hillary and Daniel Trejo-Banos and Athanasios Kousathanas and Daniel L. McCartney and Sarah E. Harris and Anna J. Stevenson and Marion Patxot and Sven Erik Ojavee and Qian Zhang and David C. Liewald and Craig W. Ritchie and Kathryn L. Evans and Elliot M. Tucker-Drob and Naomi R. Wray and Allan F. McRae and Peter M. Visscher and Ian J. Deary and Matthew R. Robinson and Riccardo E. Marioni},
-	title = {Multi-method genome- and epigenome-wide studies of inflammatory protein levels in healthy older adults},
-	journal = {Genome Medicine}
-}
-@article{36Harris_2020,
-	doi = {10.1038/s41467-019-14161-7},
-	url = {https://doi.org/10.1038%2Fs41467-019-14161-7},
-	year = 2020,
-	month = {feb},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {11},
-	number = {1},
-	author = {Sarah E. Harris and Simon R. Cox and Steven Bell and Riccardo E. Marioni and Bram P. Prins and Alison Pattie and Janie Corley and Susana Mu{\~{n}}oz Maniega and Maria Vald{\'{e}}s Hern{\'{a}}ndez and Zoe Morris and Sally John and Paola G. Bronson and Elliot M. Tucker-Drob and John M. Starr and Mark E. Bastin and Joanna M. Wardlaw and Adam S. Butterworth and Ian J. Deary},
-	title = {Neurology-related protein biomarkers are associated with cognitive ability and brain volume in older age},
-	journal = {Nature Communications}
-}
-@article{37Alloza_2020,
-	doi = {10.1038/s41398-020-0794-x},
-	url = {https://doi.org/10.1038%2Fs41398-020-0794-x},
-	year = 2020,
-	month = {apr},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {10},
-	number = {1},
-	author = {C. Alloza and M. Blesa-C{\'{a}}bez and M. E. Bastin and J. W. Madole and C. R. Buchanan and J. Janssen and J. Gibson and I. J. Deary and E. M. Tucker-Drob and H. C. Whalley and C. Arango and A. M. McIntosh and S. R. Cox and S. M. Lawrie},
-	title = {Psychotic-like experiences, polygenic risk scores for schizophrenia, and structural properties of the salience, default mode, and central-executive networks in healthy participants from {UK} Biobank},
-	journal = {Translational Psychiatry}
-}
-@article{38Malanchini_2020,
-	doi = {10.1038/s41539-020-0067-8},
-	url = {https://doi.org/10.1038%2Fs41539-020-0067-8},
-	year = 2020,
-	month = {jul},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {5},
-	number = {1},
-	author = {Margherita Malanchini and Kaili Rimfeld and Nicholas G. Shakeshaft and Andrew McMillan and Kerry L. Schofield and Maja Rodic and Valerio Rossi and Yulia Kovas and Philip S. Dale and Elliot M. Tucker-Drob and Robert Plomin},
-	title = {Evidence for a unitary structure of spatial cognition beyond general intelligence},
-	journal = {npj Science of Learning}
-}
-@article{39Buchanan_2020,
-	doi = {10.1016/j.neuroimage.2019.116443},
-	url = {https://doi.org/10.1016%2Fj.neuroimage.2019.116443},
-	year = 2020,
-	month = {may},
-	publisher = {Elsevier {BV}},
-	volume = {211},
-	pages = {116443},
-	author = {Colin R. Buchanan and Mark E. Bastin and Stuart J. Ritchie and David C. Liewald and James W. Madole and Elliot M. Tucker-Drob and Ian J. Deary and Simon R. Cox},
-	title = {The effect of network thresholding and weighting on structural brain networks in the {UK} Biobank},
-	journal = {{NeuroImage}}
+@Article{1,
+  title = {How Chinese and American children use consensus to make possibility judgments},
+  author = {Jacqueline Woolley},
+  journal = {Journal of Cognition and Culture},
+  year = {2023},
 }
